--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
-h1 {
-  color: red;
+img {
+  background-color: white;
+  height: 180px;
+  width: 300px;
+  filter: grayscale();
+  padding: 10px 10px 40px 10px;
+  border: 1px solid lightgrey;
+  opacity: 60%;
+}
+
+div {
+  display: inline-block;
+  position: relative;
+}
+
+.image01 {
+  transform: rotate(5deg) translate(80px, 150%);
+  z-index: 4;
+}
+
+.image02 {
+  transform: rotate(20deg) translate(-50px, 120%);
+  z-index: 3;
+}
+
+.image03 {
+  transform: rotate(10deg) translate(-200px, 100%);
+  z-index: 2;
+}
+
+.image04 {
+  transform: rotate(-20deg) translate(-550px, -50%);
+  z-index: 1;
 }
