--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 .container {
+  margin: 100px;
   display: grid;
   height: 100vh;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -12,19 +13,46 @@
     "box6 box6 box6 box6 box6 box6 box6";
 }
 
+img:hover {
+  transform: scale(1.7);
+  transition: 1s;
+  box-shadow: none;
+}
+
 .box1 {
-  background-color: blue;
   grid-area: box1;
+  display: flex;
+  justify-content: center;
+}
+
+.box1 img {
+  height: 150px;
+  box-shadow: -2px 5px 5px gray;
+  margin: 10px;
 }
 
 .box2 {
   grid-area: box2;
-  background-color: red;
+  display: flex;
+  justify-content: center;
+}
+
+.box2 img {
+  height: 150px;
+  box-shadow: -2px 5px 5px gray;
+  margin: 10px;
 }
 
 .box3 {
   grid-area: box3;
-  background-color: brown;
+  display: flex;
+  justify-content: center;
+}
+
+.box3 img {
+  height: 150px;
+  box-shadow: -2px 5px 5px gray;
+  margin: 10px;
 }
 
 .box4 {
