--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ body {
 
 img:hover {
   transform: scale(1.7);
+  background-color: rgba(255, 255, 255, 0.488);
+  box-shadow: 0px;
   transition: 1s;
   box-shadow: none;
 }
@@ -28,6 +30,7 @@ img:hover {
 div img:not(#table) {
   height: 120px;
   box-shadow: -5px 5px 3px gray;
+  padding: 5px;
   margin: 10px;
 }
 
