--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,21 @@ body {
     "box5 box5 box5 box5 box5 box5 box5";
 }
 
+div img:not(#table) {
+  height: 120px;
+  box-shadow: -5px 5px 3px gray;
+  margin: 10px;
+  z-index: 0;
+}
+
 img:hover {
   transform: scale(1.7);
   background-color: rgba(255, 255, 255, 0.488);
   box-shadow: 0px;
-  transition: 1s;
+  transition: 0.5s;
   box-shadow: none;
-}
-
-div img:not(#table) {
-  height: 120px;
-  box-shadow: -5px 5px 3px gray;
-  padding: 5px;
-  margin: 10px;
+  filter: none;
+  z-index: 1;
 }
 
 .box1,
